--- a/index.html
+++ b/index.html
@@ -45,14 +45,14 @@
     <section class="exp-area">
         <h1>Experiences</h1>
         <div class="flexible-container">
-            <div class="exp-item">
+            <div id="baby-web-dev" class="exp-item">
                 <h1>Baby Web Developer</h1>
                 <h3 class="orange-color">2020-2021 | Programming Hero Learner</h3>
                 <p>They didn't offer me a job. But I made myself as a remove web developer. I made their website and
                     showed
                     it to them. They liked it. And uploaded the content. It was fun working at Programming Hero.</p>
             </div>
-            <div class="exp-item">
+            <div id="fullstack-web-dev" class="exp-item">
                 <h1>Full Stack Web Developer</h1>
                 <h3 class="orange-color">2021-Present | Pro Level Developer</h3>
                 <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function,
